updated individual HTML sheets to match latest mas

--- a/StarWars5E/StarWars5e_PUG.html
+++ b/StarWars5E/StarWars5e_PUG.html
@@ -16,7 +16,7 @@
     <input type="radio" class="toggle-left" name="attr_whispertoggle" value="" checked="checked"><span data-i18n="public:-u">PUBLIC</span>
     <input type="radio" class="toggle-right" name="attr_whispertoggle" value="/w gm "><span data-i18n="to-gm:-u">TO <span class="togm">GM</span></span>
 </div>
-<div class="container npc">
+<div class="container npc" style="width: 390px;">
   <input class="npc_options-flag" type="checkbox" name="attr_npc_options-flag" checked="checked"/><span>y</span>
   <div class="npc_options">
     <div class="row title"><span data-i18n="npc-options-u">NPC OPTIONS   </span></div>
