--- a/StarWars5E/src/_testing_new_css/test.html
+++ b/StarWars5E/src/_testing_new_css/test.html
@@ -7,24 +7,26 @@
     <div class="col-sm-6 col-md-4 col">
       <div class="pa-3 card">
         <div class="d-flex pb-2">
-          <button class="flex-grow-1" type="action"><span class="pictos" style="font-size: 10px;">*</span></button>
-          <button class="flex-grow-1" type="action"><span class="pictos" style="font-size: 10px;">*</span></button>
-          <button class="flex-grow-1" type="action"><span class="pictos" style="font-size: 10px;">*</span></button>
+          <button class="flex-grow-1" type="action" name="act_left_abilities_skills"><span class="pictos three" style="font-size: 15px;">c</span></button>
+          <button class="flex-grow-1" type="action" name="act_left_weapon_attacks"><span class="pictos" style="font-size: 15px;">j</span></button>
+          <button class="flex-grow-1" type="action"><span class="pictos" style="font-size: 15px;">*</span></button>
         </div>
-        <div class="item-group">
+        <div class="item-group-abilities-skills">
           <div class="item-group-container">
             <div class="d-flex">
-              <h2 class="pr-2">+2</h2>
-              <h3 class="flex-grow-1">Strength</h3>
+              <button class="flex-grow-1" type="roll" name="roll_strength" value="@{wtype}&amp;{template:simple} {{rname=^{strength-u}}} {{mod=@{strength_mod}@{jack_bonus}}} {{r1=[[@{d20}+@{strength_mod}@{jack_attr}[STR]]]}} @{rtype}+@{strength_mod}@{jack_attr}[STR]]]}} @{charname_output}"><span class="h2 pr-2">+2</span><span class="h3 flex-grow-1 text-start" data-i18n="strength-u"></span></button>
             </div>
             <div class="d-flex px-1 pb-1">
-              <input class="attrinput" type="text" name="attr_strength_base" title="@{strength}" value="10"/>
-              <div class="d-flex">
-                <input class="py1 pr1" type="checkbox" name="attr_strength_save_prof" title="@{strength_save_prof}"/>
-                <button type="roll" name="roll_strength_save" value="@{wtype}&amp;{template:simple} {{rname=^{strength-save-u}}} {{mod=@{strength_save_bonus}}} {{r1=[[@{d20}+@{strength_save_bonus}@{pbd_safe}]]}} @{rtype}+@{strength_save_bonus}@{pbd_safe}]]}} {{global=@{global_save_mod}}} @{charname_output}">
-                  <h4 class="mr-1 text-center attr-mod">+3</h4>
-                  <h5>Saving Throw</h5>
-                </button>
+              <input class="attrinput pr-2" type="text" name="attr_strength_base" title="@{strength}" value="10"/>
+              <div>
+                <div class="d-flex">
+                  <input class="py-1 pr-1" type="checkbox" name="attr_strength_save_prof" title="@{strength_save_prof}"/>
+                  <button type="roll" name="roll_strength_save" value="@{wtype}&amp;{template:simple} {{rname=^{strength-save-u}}} {{mod=@{strength_save_bonus}}} {{r1=[[@{d20}+@{strength_save_bonus}@{pbd_safe}]]}} @{rtype}+@{strength_save_bonus}@{pbd_safe}]]}} {{global=@{global_save_mod}}} @{charname_output}"><span class="h4 mr-1 text-center attr-mod">+3</span><span class="h4">Saving Throw</span></button>
+                </div>
+                <div class="d-flex">
+                  <input class="py-1 pr-1" type="checkbox" name="attr_acrobatics_prof" title="@{acrobatics_prof}" value="(@{pb}*@{acrobatics_type})"/>
+                  <button type="roll" name="roll_acrobatics" value="@{wtype}&amp;{template:simple} {{rname=^{acrobatics-u}}} {{mod=@{acrobatics_bonus}}} {{r1=[[@{d20}+@{acrobatics_bonus}@{pbd_safe}]]}} @{rtype}+@{acrobatics_bonus}@{pbd_safe}]]}} {{global=@{global_skill_mod}}} @{charname_output}"><span class="h5 mr-1 text-center attr-mod">+1</span><span class="h5" data-i18n="acrobatics-core"></span></button>
+                </div>
               </div>
             </div>
           </div>
@@ -32,13 +34,13 @@
       </div>
     </div>
     <div class="col-sm-6 col-md-4 col">
-      <div class="pa-3 card">
+      <div class="pa-3 card center-card">
         <div class="d-flex pb-2">
           <button class="flex-grow-1" type="action"><span class="pictos" style="font-size: 10px;">*</span></button>
           <button class="flex-grow-1" type="action"><span class="pictos" style="font-size: 10px;">*</span></button>
           <button class="flex-grow-1" type="action"><span class="pictos" style="font-size: 10px;">*</span></button>
         </div>
-        <div class="item-group">
+        <div class="item-group-weapon-attacks">
           <div class="item-group-container">
             <fieldset class="repeating_abilities"> 
               <div class="ability">
@@ -61,8 +63,11 @@
                     <input type="checkbox" name="attr_atkprofflag" value="(@{pb})" checked="checked" style="margin-left: 3px;"/><span data-i18n="proficient-u">PROFICIENT</span>
                   </div>
                   <summary>
-                    <div class="d-flex pb2">
-                      <button class="flex-grow-1" type="roll" name="roll_attack" value="@{rollbase}"><span class="h4" name="attr_atkname"></span></button>
+                    <div class="d-flex flex-column">
+                      <div class="d-flex">
+                        <button class="weapon-attack flex-grow-1" type="roll" name="roll_attack" value="@{rollbase}"><span class="h4 text-start flex-grow-1" name="attr_atkname"></span><span class="flex grow-1 pr-2">+4</span><span class="flex grow-1 text-end">1d6+2 Energy</span></button>
+                      </div>
+                      <div class="d-flex"><span class="flex-grow-1">this is a big description that may take a bit to aosdifhoanice ajnociena oinc naioecn aeinc aonicd aiosndfpo</span></div>
                     </div>
                   </summary>
                   <button type="roll" name="roll_attack" value="@{rollbase}"></button>
@@ -210,6 +215,16 @@
     </div>
   </div>
 </div>
+<!--
+.skill(data-i18n-list-item='acrobatics')
+  input(type='checkbox', name='attr_acrobatics_prof', title='@{acrobatics_prof}', value='(@{pb}*@{acrobatics_type})')
+  span(name='attr_acrobatics_bonus', title='@{acrobatics_bonus}') 0
+  button(type='roll', name='roll_acrobatics', value='@{wtype}&{template:simple} {{rname=^{acrobatics-u}}} {{mod=@{acrobatics_bonus}}} {{r1=[[@{d20}+@{acrobatics_bonus}@{pbd_safe}]]}} @{rtype}+@{acrobatics_bonus}@{pbd_safe}]]}} {{global=@{global_skill_mod}}} @{charname_output}', data-i18n='acrobatics-core')
+    | Acrobatics 
+    span (Dex)
+
+
+-->
 <!--.d-flex.p-2
 .attributes-container(style='margin-top: 10px;')
     .attr-container
